--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "infinite-react-carousel": "^1.2.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-pure-loaders": "^3.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
